Sun Jan 25 13:00:00 1998  Philip Blundell  <Philip.Blundell@pobox.com>

	* lib/net-string.c (str_in_buff): Avoid compiler warning.

	* lib/inet6_gr.c, lib/inet_gr.c: Don't display inactive routes
	(ie those without RTF_UP).

	* lib/Makefile: Add support for Rose, FDDI and Ash.

	* rarp.c: Add support for /etc/ethers.  Patch from haardt@gmd.de
 	(Michael Haardt).

	* config.in, lib/hw.c: Tidy up.  Add support for Rose and FDDI.
	* lib/fddi.c, lib/rose.c, lib/rose_gr.c: New files, copied from
	Bernd's net-tools-pre-1.34.

	* ifconfig.c: Try to use AF_ROSE sockets.

	* ifconfig.c: Don't use SIOCGIFCOUNT to work out how many
 	interfaces to display; use SIOCGIFCONF with a null buffer
 	instead.

	* ifconfig.c: Don't assume ifr_qlen is defined if SIOCSIFTXQLEN
	is.
	
Tue Sep 23 20:58:27 1997  Philip Blundell  <Philip.Blundell@pobox.com>

	* ifconfig.c (if_getstats): use _PATH_PROCNET_DEV rather than
 	hardcoding.
	* lib/pathnames.h (_PATH_PROCNET_DEV): define.

	* ifconfig.c (set_flag): tidy up.
	(clr_flag): likewise.

Sun Sep 21 18:26:24 1997  Philip Blundell  <Philip.Blundell@pobox.com>

	* Makefile (RELEASE): set to 1.432
	* version.h (RELEASE): likewise.

	* TODO: updated.
	* README: likewise.

	* ifconfig.c (set_flag): print error message if no such interface.
	(clr_flag): likewise.

	* lib/net-features.h: remove ipfw stuff, add INET6
	
	* netstat.c: include <net/route.h> for net-features.  Patch by
 	Roderich Schupp <rsch@ExperTeam.de> 
	* route.c: likewise.
	